--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.4.4",
+    "apollo-boost": "^0.4.7",
     "core-js": "^2.6.5",
     "vue": "^2.6.10",
+    "vue-apollo": "^3.0.2",
     "vue-router": "^3.0.3",
     "vuetify": "^2.1.0",
     "vuex": "^3.0.1"
